# wikitransbot

./: .gitignore  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  README.md  config_template.json  dataset.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug-template.md
.github/workflows/: ci.yaml
ansible/roles/deploy/: deploy.yaml  init_instance.yaml  install_docker.yaml  setup_architecture.yaml  update_version.yaml
tests/wikitransbot/: test_cmd.py  test_main.py  tmp_since_id.txt
tests/wikitransbot/tests_command_handlers/: test_article_command_handler.py  test_help_command_handler.py  test_intro_command_handler.py  test_map_handler.py  test_trombinoscope_handler.py
wikitransbot/: cmd.py  exceptions.py  intent_link_matches.json  main.py
wikitransbot/command_handlers/: article_command_handler.py  base_command_handler.py  help_command_handler.py  intro_command_handler.py  map_command_handler.py  trombinoscope_command_handler.py
