[tool.poetry]
name = "wikitransbot"
version = "1.1.0"
description = "A Twitter bot to make request on the Wikitrans.co website"
authors = ["Jef Roelandt <roelandt.jef@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"
python-twitter-v2 = "0.7.4"
pytest = "6.2.5"
flake8 = "^4.0.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
